# TC-02

./: .env.example  .gitignore  FIX_SUMMARY.md  FIX_USER_SELECTOR_ISSUE.md  IMPROVEMENTS.md  NOTIMPLEMENTEDERROR_ANALYSIS.md  QUICK_START.md  README.md  TESTING_GUIDE.md  package-lock.json  run.txt  test_user_selector_fix.py  tmp_inspect.js
.github/: run.txt
.github/workflows/: backend-ci.yml  frontend-ci.yml
.venv-vllm/: pyvenv.cfg
.venv-vllm/Scripts/: activate  activate.bat
backend/: README.md  debug_executor.py  debug_test.py  pyproject.toml  run_server.py
backend/app/: config.py  main.py  schemas.py
backend/app/brain/: __init__.py  base.py  http_client.py
backend/app/mcp/: browser_client.py  filesystem_client.py
backend/app/runtime/: executor.py  explicit_plan_parser.py  instruction_parser.py  plan_normalizer.py  selector_finder.py  selector_memory.py  step_importer.py  store.py  test_case_store.py
backend/tests/: test_admin_auth.py  test_auto_wait_controls.py  test_browser_verify_text.py  test_executor_selector_fallback.py  test_import_steps.py  test_instruction_parser.py  test_plan_normalizer.py  test_runs.py  test_test_cases.py
brain/: .env.example  README.md  pyproject.toml
brain/app/: config.py  main.py  schemas.py
brain/app/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  local_vllm.py  openai_provider.py
docs/: PRD.md  acceptance-criteria.md  action-schema.md  architecture.md
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
